--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,7 @@
 /*your custom CSS here*/
+body{
+  padding-top: 100px;
+}
 img {
   width 100%
 }
@@ -6,4 +9,12 @@ img {
 .box{
   padding 10px 20px;
   
+}
+
+.heading { 
+  position: fixed;
+  width: 100%;
+  top:0 ;
+  left 0:
+  padding: 10px 10px 0px 10px;
 }
