--- a/css/layout.css
+++ b/css/layout.css
@@ -1,20 +1,24 @@
 /*your custom CSS here*/
-body{
+
+
+body {
   padding-top: 100px;
 }
+
 img {
-  width 100%
+  width: 100%;
 }
 
-.box{
-  padding 10px 20px;
-  
+
+.box {
+  padding: 10px 20px;
 }
 
-.heading { 
+
+.heading {
   position: fixed;
   width: 100%;
-  top:0 ;
-  left 0:
-  padding: 10px 10px 0px 10px;
+  top: 0;
+  left: 0;
+  padding: 10px 10px 0 10px;
 }
