--- a/css/color.css
+++ b/css/color.css
@@ -20,7 +20,7 @@ a:hover {
 }
 
 .heading {
-  background-color: #999;
+  background-color:#23DA9D;
 }
 
 h1 small {
@@ -41,3 +41,4 @@ h1 small {
   color: #fff;
   font-style: italic;
 }
+
