--- a/css/color.css
+++ b/css/color.css
@@ -15,12 +15,12 @@ a {
 }
 
 a:hover {
-  color: #FFF;
+  color: #999;
   text-decoration: none;
 }
 
 .heading {
-  background-color:#23DA9D;
+  background-color: #23DA9D;
 }
 
 h1 small {
@@ -41,4 +41,3 @@ h1 small {
   color: #fff;
   font-style: italic;
 }
-
