--- a/css/color.css
+++ b/css/color.css
@@ -20,7 +20,7 @@ a:hover {
 }
 
 .heading {
-  background-color: #23DA9D;
+  background-color: #59B89A;
 }
 
 h1 small {
@@ -37,7 +37,7 @@ h1 small {
 }
 
 .footer {
-  background-color: #23DA9D;
+  background-color: #59B89A;
   color: #fff;
   font-style: italic;
 }
