--- a/css/layout.css
+++ b/css/layout.css
@@ -3,6 +3,7 @@
 
 body {
   padding-top: 120px;
+  padding-bottom: 120px;
 }
 
 img {
@@ -11,7 +12,7 @@ img {
 
 
 .box {
-  padding: 10px 20px;
+  padding: 30px 40px;
 }
 
 
