--- a/css/layout.css
+++ b/css/layout.css
@@ -12,14 +12,15 @@ img {
 
 
 .box {
-  padding: 15px 25px;
+  padding: 10px 20px;
 }
 
 
 .heading {
   position: fixed;
   width: 100%;
-  top: 10;
+  top: 0;
   left: 0;
   padding: 10px 10px 0 10px;
+  size: 130%;
 }
