--- a/css/layout.css
+++ b/css/layout.css
@@ -24,3 +24,10 @@ img {
   padding: 10px 10px 0 10px;
   size: 100%;
 }
+.footer {
+  position: fixed;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  padding: 10px 10px 0 10px;
+}
